View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0024595 | Community | OCCT:Data Exchange | public | 2014-02-04 04:59 | 2016-04-20 15:50 |
Reporter | thomhong | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 6.7.0 | ||||
Target Version | 7.0.0 | Fixed in Version | 7.0.0 | ||
Summary | 0024595: STEP import missing surfaces | ||||
Description | The imported model is missing surfaces at the bottom (lowest Z) of the model. The bottom end of the model should be spherical and closed, not open. | ||||
Steps To Reproduce | 1. Open the attached STEP file (using ImportExport sample project) //================================== test script bug24595 was added. | ||||
Tags | No tags attached. | ||||
Test case number | bugs step bug24595 | ||||
|
281390.stp (431,098 bytes) |
|
The face (# 74) is present but incorrectly oriented (it is based on spherical surface and wrong part of the surface is taken). OCCT translator does not report any warnings on this face, that suggests that the face might be incorrectly encoded in the file. Do other translators (CAD systems etc.) open this file correctly? |
|
Thank you for investigating this issue for us. I believe that the file opens correctly in NX, as well as IDA-STEP (http://www.ida-step.net/components/viewers/basic). I will pass on your comment to the author of the STEP file. |
|
280696.stp (182,116 bytes) |
|
Uploaded another example today with the same or similar issue. Also opens fine in other CAD systems (IDA-STEP, DelCam Exchange 2013, CT Core Tech's 3D_Evolution 2014, DP Esprit 2014), but bottom surface import has issue in OpenCASCADE's ImportExport sample. |
|
280612.stp (909,537 bytes) |
|
Branch CR24595 has been created by akz. SHA-1: 52869cd0cc257f90f85bd98a2b9996e7b6c6f756 Detailed log of new commits: Author: akz Date: Wed Feb 11 20:40:25 2015 +0300 0024595: STEP import missing surfaces According to the specification of ISO-10303 part 42: "If the face has only one bound and this is of type vertex_loop, then the interior of the face is the domain of the face_surface.face_geometry. In such a case the underlying surface shall be closed (e.g. a spherical_surface.)" - natural bounds are applied only in case if VertexLoop is only the one defined face bound. |
2015-02-12 15:29 developer |
bug24595 (821 bytes) |
|
Branch CR24595 is ready to review |
|
Branch CR24595 is ready to be tested |
|
Branch CR24595 has been updated forcibly by apv. SHA-1: ea2cf441b741a94cf7ac97a5894f959e68128752 |
|
Branch CR24595 has been rebased on the current master |
|
Dear BugMaster, Branch CR24595 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested. SHA-1: ea2cf441b741a94cf7ac97a5894f959e68128752 Number of compiler warnings: occt component: Linux: 18 (18 on master) Windows: 0 (0 on master) products component: Linux: 11 (11 on master) Windows: 1 (1 on master) Regressions/Differences: http://occt-tests/CR24595-master-occt/Debian60-64/summary.html http://occt-tests/CR24595-master-occt/Windows-32-VC10/summary.html de step_1(004) D1, X2 de step_2(005) S5 Testing on Linux: Total MEMORY difference: 86046407 / 86143565 Total CPU difference: 48119.38000000016 / 48438.35999999994 Testing on Windows: Total MEMORY difference: 40684398 / 40695157 Total CPU difference: 36003.75 / 34792.25 |
|
Branch CR24595_1 has been created by gka. SHA-1: 84e82ff782ccd0186281b0eefad7cf1c4baad5fc Detailed log of new commits: Author: gka Date: Fri Dec 11 11:01:27 2015 +0300 0024595: STEP import missing surfaces Modification to create natural bounds for face based on the spherical and Bspline surface and having only one bound represented by Vertex loop was made. According to the specification of ISO-10303 part 42: "If the face has only one bound and this is of type vertex_loop, then the interior of the face is the domain of the face_surface.face_geometry. In such a case the underlying surface shall be closed (e.g. a spherical_surface.)" - natural bounds are applied only in case if VertexLoop is only the one defined face bound. |
|
Branch CR24595_1 is ready to be reviewed |
|
No remarks, please test |
|
Branch CR24595_1 has been updated forcibly by apv. SHA-1: 9ef79feaed83e7a92d4e0a0cdd8331348f5881bf |
|
Branch CR24595_1 has been rebased on the current master |
|
Dear BugMaster, Branch CR24595_1 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested. SHA-1: 9ef79feaed83e7a92d4e0a0cdd8331348f5881bf Number of compiler warnings: occt component: Linux: 0 (0 on master) Windows: 0 (0 on master) MacOS: 134 (134 on master) products component: Linux: 37 (37 on master) Windows: 0 (0 on master) Regressions/Differences: http://occt-tests/CR24595-1-master-occt-64/Windows-64-VC10/summary.html de step_3 D8 Testing on Linux: Total MEMORY difference: 93338926 / 93828350 [-0.52%] Total CPU difference: 18935.819999999523 / 19236.40999999988 [-1.56%] Testing on Windows: Total MEMORY difference: 56185248 / 56187082 [-0.00%] Total CPU difference: 17551.532109098946 / 17780.338775798962 [-1.29%] |
|
Dear gka, Branch CR24595_1 has been rejected due to: - regressions/differences/improvements |
|
Dear apv, This case is not regression |
|
Branch CR24595_1 has been updated by apv. SHA-1: f7a5b5c7a225920dc5fb85a0181378ff6ee019a0 Detailed log of new commits: Author: apv Date: Thu Dec 17 11:42:07 2015 +0300 Update of test-cases according to the new behavior |
|
Branch CR24595_1 has been updated by apv. SHA-1: a1bd9892fefcd8545472da8e00aeec44214db034 Detailed log of new commits: Author: apv Date: Thu Dec 17 12:08:49 2015 +0300 Test-case for issue 0024595 |
|
Testing case result: bugs step bug24595 - OK http://occt-tests/CR24595-1-master-occt-64/Debian70-64/bugs/step/bug24595.html http://occt-tests/CR24595-1-master-occt-64/Windows-64-VC10/bugs/step/bug24595.html |
|
Branch CR24595 has been deleted by kgv. SHA-1: ea2cf441b741a94cf7ac97a5894f959e68128752 |
|
Branch CR24595_1 has been deleted by kgv. SHA-1: a1bd9892fefcd8545472da8e00aeec44214db034 |
occt: master 4f99f761 2015-12-11 08:01:27 Committer: bugmaster Details Diff |
0024595: STEP import missing surfaces Modification to create natural bounds for face based on the spherical and Bspline surface and having only one bound represented by Vertex loop was made. According to the specification of ISO-10303 part 42: "If the face has only one bound and this is of type vertex_loop, then the interior of the face is the domain of the face_surface.face_geometry. In such a case the underlying surface shall be closed (e.g. a spherical_surface.)" - natural bounds are applied only in case if VertexLoop is only the one defined face bound. Update of test-cases according to the new behavior Test-case for issue 0024595 |
Affected Issues 0024595 |
|
mod - src/StepToTopoDS/StepToTopoDS_TranslateFace.cxx | Diff File | ||
add - tests/bugs/step/bug24595 | Diff File | ||
mod - tests/de/step_1/D1 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2014-02-04 04:59 | thomhong | New Issue | |
2014-02-04 04:59 | thomhong | Assigned To | => gka |
2014-02-04 04:59 | thomhong | File Added: 281390.stp | |
2014-02-04 06:57 | abv | Note Added: 0027743 | |
2014-02-04 06:57 | abv | Note Edited: 0027743 | |
2014-02-04 20:52 | thomhong | Note Added: 0027754 | |
2014-08-21 02:09 | thomhong | File Added: 280696.stp | |
2014-08-21 02:14 | thomhong | Note Added: 0030964 | |
2014-08-21 20:26 | thomhong | File Added: 280612.stp | |
2014-09-11 18:32 | abv | Target Version | => 7.1.0 |
2015-02-06 17:08 | gka | Assigned To | gka => akz |
2015-02-06 17:08 | gka | Status | new => assigned |
2015-02-11 20:44 | git | Note Added: 0037393 | |
2015-02-12 15:29 |
|
File Added: bug24595 | |
2015-02-12 15:30 |
|
Note Added: 0037443 | |
2015-02-12 15:30 |
|
Assigned To | akz => gka |
2015-02-12 15:30 |
|
Status | assigned => resolved |
2015-02-12 15:30 |
|
Steps to Reproduce Updated | |
2015-02-13 17:55 | gka | Note Added: 0037527 | |
2015-02-13 17:55 | gka | Assigned To | gka => bugmaster |
2015-02-13 17:55 | gka | Status | resolved => reviewed |
2015-02-13 18:01 |
|
Assigned To | bugmaster => apv |
2015-02-13 18:46 | git | Note Added: 0037537 | |
2015-02-13 18:47 |
|
Note Added: 0037538 | |
2015-02-17 18:20 |
|
Note Added: 0037638 | |
2015-02-17 18:20 |
|
Assigned To | apv => akz |
2015-02-17 18:20 |
|
Status | reviewed => assigned |
2015-12-11 11:02 | git | Note Added: 0049009 | |
2015-12-11 11:03 | gka | Note Added: 0049010 | |
2015-12-11 11:03 | gka | Assigned To | akz => abv |
2015-12-11 11:03 | gka | Status | assigned => resolved |
2015-12-11 12:59 | abv | Note Added: 0049020 | |
2015-12-11 12:59 | abv | Assigned To | abv => bugmaster |
2015-12-11 12:59 | abv | Status | resolved => reviewed |
2015-12-11 14:01 |
|
Assigned To | bugmaster => apv |
2015-12-11 15:27 | git | Note Added: 0049047 | |
2015-12-11 15:28 |
|
Note Added: 0049048 | |
2015-12-15 12:34 |
|
Note Added: 0049137 | |
2015-12-15 12:34 |
|
Assigned To | apv => gka |
2015-12-15 12:34 |
|
Status | reviewed => assigned |
2015-12-15 12:35 |
|
Note Added: 0049138 | |
2015-12-15 17:11 | gka | Assigned To | gka => apv |
2015-12-15 17:12 | gka | Note Added: 0049170 | |
2015-12-15 17:52 | gka | Status | assigned => feedback |
2015-12-16 16:21 | bugmaster | Assigned To | apv => bugmaster |
2015-12-16 16:21 | bugmaster | Status | feedback => tested |
2015-12-17 11:42 | git | Note Added: 0049224 | |
2015-12-17 12:09 | git | Note Added: 0049226 | |
2015-12-17 12:10 |
|
Test case number | => bugs step bug24595 |
2015-12-17 12:11 |
|
Note Added: 0049227 | |
2015-12-17 12:12 |
|
Note Edited: 0049227 | |
2015-12-18 15:25 | bugmaster | Changeset attached | => occt master 4f99f761 |
2015-12-18 15:25 | bugmaster | Status | tested => verified |
2015-12-18 15:25 | bugmaster | Resolution | open => fixed |
2015-12-21 12:53 | bugmaster | Target Version | 7.1.0 => 7.0.0 |
2016-02-15 15:17 | abv | Relationship added | related to 0023202 |
2016-04-17 13:54 | git | Note Added: 0052975 | |
2016-04-17 13:54 | git | Note Added: 0052976 | |
2016-04-20 15:43 |
|
Fixed in Version | => 7.0.0 |
2016-04-20 15:50 |
|
Status | verified => closed |